--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "startNodemon": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,8 @@
     "discord.js-commando": "github:discordjs/Commando",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node": "^16.0.0"
+    "node": "^16.0.0",
+    "nodemon": "^2.0.15"
   },
   "engines": {
     "node": "v14.15.5",
